--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -7,6 +7,6 @@
 
 
 #Links
-  = link_to "Home", root_path
-  = link_to "Edit", edit_task_path(@task)
-  = link_to "Delete", task_path(@task), method: :delete, data: {confirm: "Are you sure?"}
+  = link_to "Home", root_path, class: "btn btn-sm btm-default"
+  = link_to "Edit", edit_task_path(@task), class: "btn btn-sm btm-default"
+  = link_to "Delete", task_path(@task), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btm-default"
